[package]
name = "shuttle-service"
version = "0.56.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The core traits for running services on Shuttle (shuttle.dev)"
homepage = "https://www.shuttle.dev"

[dependencies]
shuttle-common = { workspace = true, features = ["models"] }

anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
strfmt = { workspace = true }
thiserror = { workspace = true }
