[package]
name = "test-utils"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
portpicker = { workspace = true }
bollard = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
